force-app/main/default/objects/Deal_Building__c/Deal_Building__c.object-meta.xml
<CustomObject>
    <label>Deal Unit</label>
    <nameField>
        <displayFormat>DU# {00000000}</displayFormat>
        <label>Deal Unit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>