force-app/main/default/objects/Deal_Building__c/fields/Achieved_Rent_SAR__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Rent_SAR__c</fullName>
    <formula>Deal__r.Achieved_Rent_SAR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achieved Rent SAR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>