force-app/main/default/objects/Deal_Building__c/fields/Agent_Commission_8__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission_8__c</fullName>
    <formula>Total_Selling_Price_SAR__c*0.08</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Commission 8%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>