force-app/main/default/objects/Deal_Building__c/fields/Apartment_Type__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Type__c</fullName>
    <formula>TEXT( Building__r.Apartment_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apartment Type</label>
    <type>Text</type>
</CustomField>