force-app/main/default/objects/Deal_Building__c/fields/Ask_Weighted__c.field-meta.xml
<CustomField>
    <fullName>Ask_Weighted__c</fullName>
    <formula>Building__r.Ask_Weighted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ask. Weighted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>