force-app/main/default/objects/Deal_Building__c/fields/Asking_Annual_Rent__c.field-meta.xml
<CustomField>
    <fullName>Asking_Annual_Rent__c</fullName>
    <formula>IF(Building__r.Asking_Annual_Rent__c &gt; 0,Building__r.Asking_Annual_Rent__c,
Deal__r.Total_Asking_Rent_SR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asking Annual Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>