force-app/main/default/objects/Deal_Building__c/fields/Asking_Price__c.field-meta.xml
<CustomField>
    <fullName>Asking_Price__c</fullName>
    <formula>Building__r.Asking_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asking Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>