force-app/main/default/objects/Deal_Building__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipName>Deal_Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>