force-app/main/default/objects/Deal_Building__c/fields/Client_Asking_Price_SAR__c.field-meta.xml
<CustomField>
    <fullName>Client_Asking_Price_SAR__c</fullName>
    <formula>Building__r.Client_Asking_Price_SAR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Asking Price SAR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>