force-app/main/default/objects/Deal_Building__c/fields/Collected_SAR_Rent__c.field-meta.xml
<CustomField>
    <fullName>Collected_SAR_Rent__c</fullName>
    <formula>Deal__r.Collected_SAR_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collected SAR (Rent)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>