force-app/main/default/objects/Deal_Building__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Deal_Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>