force-app/main/default/objects/Deal_Building__c/fields/Deal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deal_Stage__c</fullName>
    <formula>text( Deal__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Stage</label>
    <type>Text</type>
</CustomField>