force-app/main/default/objects/Deal_Building__c/fields/DealId__c.field-meta.xml
<CustomField>
    <fullName>DealId__c</fullName>
    <formula>Deal__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Id</label>
    <type>Text</type>
</CustomField>