force-app/main/default/objects/Deal_Building__c/fields/Edara_Commission_2__c.field-meta.xml
<CustomField>
    <fullName>Edara_Commission_2__c</fullName>
    <formula>Total_Selling_Price_SAR__c*0.02</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission 2%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>