force-app/main/default/objects/Deal_Building__c/fields/Gross_Leasable_Amount_SAR__c.field-meta.xml
<CustomField>
    <fullName>Gross_Leasable_Amount_SAR__c</fullName>
    <formula>Total_NSA__c+Total_Prices_Services_Areas__c+Total_Prices_Terraces_Areas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total (NSA) + Total Prices (Services Areas) + Total Prices (Terraces Areas)</inlineHelpText>
    <label>Gross Leasable Amount SAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>