force-app/main/default/objects/Deal_Building__c/fields/LandArea__c.field-meta.xml
<CustomField>
    <fullName>LandArea__c</fullName>
    <formula>Building__r.LandArea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Land Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>