force-app/main/default/objects/Deal_Building__c/fields/LandSellableAmount__c.field-meta.xml
<CustomField>
    <fullName>LandSellableAmount__c</fullName>
    <formula>Building__r.LandSellableAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Land Sellable Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>