force-app/main/default/objects/Deal_Building__c/fields/LandSellableAreaSqm__c.field-meta.xml
<CustomField>
    <fullName>LandSellableAreaSqm__c</fullName>
    <formula>Building__r.LandSellableAreaSqm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Land Sellable Area Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>