force-app/main/default/objects/Deal_Building__c/fields/Lease_Phases__c.field-meta.xml
<CustomField>
    <fullName>Lease_Phases__c</fullName>
    <formula>TEXT( Building__r.Lease_Phases__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Phases</label>
    <type>Text</type>
</CustomField>