force-app/main/default/objects/Deal_Building__c/fields/Leasing_Rate_Sqm_SAR__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Rate_Sqm_SAR__c</fullName>
    <formula>Building__r.Leasing_Rate_Sqm_SAR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leasing Rate / Sqm SAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>