force-app/main/default/objects/Deal_Building__c/fields/LocationAndVisibility__c.field-meta.xml
<CustomField>
    <fullName>LocationAndVisibility__c</fullName>
    <formula>TEXT(Building__r.LocationAndVisibility__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location And Visibility</label>
    <type>Text</type>
</CustomField>