force-app/main/default/objects/Deal_Building__c/fields/Min_Weighted_Rate__c.field-meta.xml
<CustomField>
    <fullName>Min_Weighted_Rate__c</fullName>
    <formula>Building__r.Min_Weighted_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min. Weighted Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>