force-app/main/default/objects/Deal_Building__c/fields/Minimum_Acceptable_Rent_SAR_Year__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Acceptable_Rent_SAR_Year__c</fullName>
    <formula>Deal__r.Minimum_Acceptable_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Acceptable Rent (SAR/Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>