force-app/main/default/objects/Deal_Building__c/fields/Minimum_Annual_Rent__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Annual_Rent__c</fullName>
    <formula>Building__r.Minimum_Annual_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Annual Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>