force-app/main/default/objects/Deal_Building__c/fields/Passage_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Passage_Area_Sqm__c</fullName>
    <formula>Building__r.Passage_Area_Sqm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Area Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>