force-app/main/default/objects/Deal_Building__c/fields/PreLaunchPrice__c.field-meta.xml
<CustomField>
    <fullName>PreLaunchPrice__c</fullName>
    <formula>Building__r.PreLaunchPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre Launch Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>