force-app/main/default/objects/Deal_Building__c/fields/Price_Notes__c.field-meta.xml
<CustomField>
    <fullName>Price_Notes__c</fullName>
    <label>Price Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>