force-app/main/default/objects/Deal_Building__c/fields/Retail_Category__c.field-meta.xml
<CustomField>
    <fullName>Retail_Category__c</fullName>
    <formula>TEXT (Building__r.Retail_Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retail Category</label>
    <type>Text</type>
</CustomField>