force-app/main/default/objects/Deal_Building__c/fields/Service_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Service_Area_Sqm__c</fullName>
    <formula>Building__r.Service_Area_Sqm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Area Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>