force-app/main/default/objects/Deal_Building__c/fields/Tenant_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_s_Name__c</fullName>
    <formula>HYPERLINK(&quot;https://edara2--cetdigit.sandbox.lightning.force.com/lightning/r/Account/&quot; &amp; Deal__r.AccountId ,  Deal__r.Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant&apos;s Name</label>
    <type>Text</type>
</CustomField>