force-app/main/default/objects/Deal_Building__c/fields/Total_NSA__c.field-meta.xml
<CustomField>
    <fullName>Total_NSA__c</fullName>
    <formula>Building__r.Total_NSA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (NSA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>