force-app/main/default/objects/Deal_Building__c/fields/Total_Prices_Lobby__c.field-meta.xml
<CustomField>
    <fullName>Total_Prices_Lobby__c</fullName>
    <formula>Building__r.Total_Prices_Lobby_Areas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Prices (Lobby)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>