force-app/main/default/objects/Deal_Building__c/fields/Total_Prices_Terraces_Areas__c.field-meta.xml
<CustomField>
    <fullName>Total_Prices_Terraces_Areas__c</fullName>
    <formula>Building__r.Total_Prices_Terraces_Areas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Prices (Terraces Areas)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>