force-app/main/default/objects/Deal_Building__c/fields/Total_Selling_Price_SAR__c.field-meta.xml
<CustomField>
    <fullName>Total_Selling_Price_SAR__c</fullName>
    <label>Total Selling Price SAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>