force-app/main/default/objects/Deal_Building__c/fields/Total_Unit_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Area_Sqm__c</fullName>
    <formula>Building__r.Total_Unit_Area_Sqm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Area Size Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>