force-app/main/default/objects/Deal_Building__c/fields/Tower_Name__c.field-meta.xml
<CustomField>
    <fullName>Tower_Name__c</fullName>
    <formula>TEXT( Building__r.Tower_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower Name</label>
    <type>Text</type>
</CustomField>