force-app/main/default/objects/Deal_Building__c/fields/Type_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Activity__c</fullName>
    <formula>TEXT (Building__r.Type_of_Activity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Activity</label>
    <type>Text</type>
</CustomField>