force-app/main/default/objects/Deal_Building__c/fields/Unit_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Unit_Area_Sqm__c</fullName>
    <formula>Building__r.Unit_Area_Sqm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Area / Sqm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>