force-app/main/default/objects/Deal_Building__c/fields/Unit_Total_Selling_Price_SAR__c.field-meta.xml
<CustomField>
    <fullName>Unit_Total_Selling_Price_SAR__c</fullName>
    <formula>Building__r.Total_Selling_Price_SAR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit: Total Selling Price SAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>