force-app/main/default/objects/Deal_Building__c/fields/VillaArea__c.field-meta.xml
<CustomField>
    <fullName>VillaArea__c</fullName>
    <formula>Building__r.VillaArea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Villa Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>