force-app/main/default/objects/Deal_Building__c/fields/VillaSellableAmount__c.field-meta.xml
<CustomField>
    <fullName>VillaSellableAmount__c</fullName>
    <formula>Building__r.VillaSellableAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Villa Sellable Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>