force-app/main/default/objects/Deal_Building__c/fields/VillaSellableAreaSqm__c.field-meta.xml
<CustomField>
    <fullName>VillaSellableAreaSqm__c</fullName>
    <formula>Building__r.VillaSellableAreaSqm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Villa Sellable Area Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>