force-app/main/default/objects/Deal_Building__c/fields/wc_Toilets_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>wc_Toilets_Area_Sqm__c</fullName>
    <formula>Building__r.wc_Toilets_Area_Sqm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>wc Toilets Area Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>