force-app/main/default/objects/Deal_Building__c/fields/X1TEMP__c.field-meta.xml
<CustomField>
    <fullName>X1TEMP__c</fullName>
    <label>1TEMP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>