force-app/main/default/objects/Deal_Building__c/recordTypes/ResidentialProperty.recordType-meta.xml
<RecordType>
    <fullName>ResidentialProperty</fullName>
    <active>true</active>
    <label>Residential Property</label>
</RecordType>