force-app/main/default/objects/Deal_Building__c/validationRules/AskingPriceNotLowerThanPreLaunchPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>AskingPriceNotLowerThanPreLaunchPrice</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED(Total_Selling_Price_SAR__c),
    NOT(ISBLANK(Total_Selling_Price_SAR__c)),
    NOT(ISBLANK(PreLaunchPrice__c)),
    Total_Selling_Price_SAR__c &lt; PreLaunchPrice__c
)</errorConditionFormula>
    <errorMessage>Total Selling Price cannot be lower than Pre Launch Price.</errorMessage>
</ValidationRule>